Se agregan validaciones a formularios

--- a/src/app/components/dRooms/dRooms.component.html
+++ b/src/app/components/dRooms/dRooms.component.html
@@ -8,53 +8,55 @@
                   <div class="main-box-body clearfix">
                     <div class=" col-md-12 mb-3">
                         <p>Comedores</p>
-                        <form class="needs-validation" novalidate>
+                        <form class="needs-validation" [formGroup]="reactiveForm" (ngSubmit)="createDRoom()">
                             <div class="form-row">
                               <div class="col-md-4 mb-3">
                                 <label for="validationCustom01">Nombre del comedor</label>
-                                <input type="text" class="form-control" name="dRoom" class="form-control" #dRoom="ngModel" [(ngModel)]="dinning.dRoom" id="validationCustom01" placeholder="Lyria Fernanda"  required>
+                                <input type="text" class="form-control" formControlName="dRoom" class="form-control" #dRoom id="validationCustom01" placeholder="Lyria Fernanda"  required>
                               </div>
-                              <div class="col-md-4 mb-3">
+                              <div class="col-md-7 mb-3">
                                 <label for="validationCustom02">Observaciones</label>
-                                <input type="text" class="form-control" name="observations" #observations="ngModel" [(ngModel)]="dinning.observations" id="validationCustom02" placeholder="Gonzalez" required>
+                                <input type="text" class="form-control" formControlName="observations" #observations id="validationCustom02" placeholder="Comedor de la empresa Empresa Inc." required>
                               </div>
-                              <div class="col-md-3 mb-3">
+
+                            </div>
+
+                            <div class="form-row">
+                              <div class="col-md-4 mb-3">
                                 <label for="validationCustom03">Encargado</label>
-                                <select id="inputType" class="form-control" name="user" #user="ngModel" [(ngModel)]="dinning.user" id="validationCustom03" required>
+                                <select id="inputType" class="form-control" formControlName="user" #user id="validationCustom03" required>
                                    <option selected> Elegir...</option>
                                     <option *ngFor="let u of users">{{u._id}}</option>
                                 </select>
                               </div>
-                            </div>
-
-                            <div class="form-row">
                               <div class="col-md-4 mb-3">
                                 <label for="validationCustom04">Nombre de la calle</label>
-                                <input type="text" class="form-control" name="street" class="form-control" #street="ngModel" [(ngModel)]="dinning.street" id="validationCustom04" placeholder="Calle Egipto"  required>
-                              </div>
-                              <div class="col-md-4 mb-3">
-                                <label for="validationCustom05">Numero exterior</label>
-                                <input type="number" class="form-control" name="street_number" #street_number="ngModel" [(ngModel)]="dinning.street_number" id="validationCustom05" placeholder="305" required>
+                                <input type="text" class="form-control" formControlName="street" class="form-control" #street id="validationCustom04" placeholder="Calle Egipto"  required>
                               </div>
                               <div class="col-md-3 mb-3">
-                                <label for="validationCustom06">Numero interior</label>
-                                <input type="number" class="form-control" name="suite_number" #suite_number="ngModel" [(ngModel)]="dinning.suite_number" id="validationCustom06" placeholder="10">
+                                <label for="validationCustom05">Numero exterior</label>
+                                <input type="number" class="form-control" formControlName="street_number" #street_number id="validationCustom05" placeholder="305" required>
                               </div>
                             </div>
 
                             <div class="form-row">
                               <div class="col-md-4 mb-3">
-                                <label for="validationCustom07">Colonia</label>
-                                <input type="text" class="form-control" name="colony" class="form-control" #colony="ngModel" [(ngModel)]="dinning.colony" id="validationCustom07" placeholder="Diego Lucero"  required>
+                                <label for="validationCustom06">Numero interior</label>
+                                <input type="number" class="form-control" formControlName="suite_number" #suite_number id="validationCustom06" placeholder="10">
                               </div>
                               <div class="col-md-4 mb-3">
+                                <label for="validationCustom07">Colonia</label>
+                                <input type="text" class="form-control" formControlName="colony" class="form-control" #colony id="validationCustom07" placeholder="Diego Lucero"  required>
+                              </div>
+                              <div class="col-md-3 mb-3">
                                 <label for="validationCustom08">Codigo Postal</label>
-                                <input type="number" class="form-control" name="postal_code" #postal_code="ngModel" [(ngModel)]="dinning.postal_code" id="validationCustom08" placeholder="31100" required>
+                                <input type="number" class="form-control" formControlName="postal_code" #postal_code id="validationCustom08" placeholder="31100" required>
                               </div>
                             </div>
 
 
-                            <button class="btn btn-primary float-right mb-3" type="reset" (click)="createDRoom()">Agregar</button>
+                            <button class="btn btn-primary float-right mb-3" type="reset" (click)="createDRoom()"
+                            [disabled]="!reactiveForm.valid">Agregar</button>
                           </form>
                     </div>
 
