--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,17 +16,17 @@
     <hr class="sidebar-divider my-0">
 
     <!-- Nav Item - Dashboard -->
-    <li class="nav-item active">
+    <li class="nav-item active" *ngIf="rest.loggedIn()">
       <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/users']">
         <i class="fas fa-fw fa-tachometer-alt"></i>
         <span>Inicio</span></a>
     </li>
 
     <!-- Divider -->
-    <hr class="sidebar-divider">
+    <hr class="sidebar-divider" *ngIf="rest.loggedIn()">
 
     <!-- Heading -->
-    <div class="sidebar-heading">
+    <div class="sidebar-heading" *ngIf="rest.loggedIn()">
       Funciones
     </div>
 
@@ -45,12 +45,12 @@
       </div>
     </li>
 
-    <li class="nav-item">
+    <li class="nav-item" *ngIf="rest.loggedIn()">
       <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
         <i class="fas fa-fw fa-wrench"></i>
         <span>Pedidos</span>
       </a>
-      <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
+      <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar" *ngIf="rest.loggedIn()">
         <div class="bg-white py-2 collapse-inner rounded">
           <h6 class="collapse-header">Funciones</h6>
           <a class="collapse-item" *ngIf="rest.loggedIn() && rest.getRole()=='Admin'" [routerLinkActive]="['active']" [routerLink]="['/dinningRooms']">Comedores</a>
@@ -232,7 +232,7 @@
           <!-- Nav Item - User Information -->
           <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
+              <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ this.rest.getNick()}}</span>
               <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
             </a>
             <!-- Dropdown - User Information -->
