Se agrega contador de notificaciones

--- a/src/app/components/users/user.component.html
+++ b/src/app/components/users/user.component.html
@@ -40,10 +40,12 @@
                               <div class="col-md-3 mb-3">
                                 <label for="validationCustom05">Tipo de usuario</label>
                                 <select id="inputType" class="form-control" formControlName="user_type" name="userType" #userType required>
+                                    <option disabled>Elegir...</option>
                                     <option>Admin</option>
                                     <option>Chef</option>
                                     <option>Gerente</option>
                                     <option>Compras</option>
+                                    <option>Chofer</option>
                                 </select>
                               </div>
                             </div>
