--- a/src/app/components/productType/productType.component.html
+++ b/src/app/components/productType/productType.component.html
@@ -1,7 +1,7 @@
 
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 
-  <div class="container bootstrap snippet">
+  <div class="container bootstrap snippet" *ngIf="rest.loggedIn() && rest.getRole()=='Admin' || rest.getRole()=='Gerente'">
       <div class="row">
           <div class="col-lg-12">
               <div class="main-box no-header clearfix">
@@ -43,7 +43,7 @@
                                         <img src="https://bootdey.com/img/Content/user_1.jpg" alt="">
                                         <a href="#" class="user-link">{{pt.type}}</a>
                                     </td>
-                                    <td style="width: 20%;">
+                                    <td style="width: 20%;" *ngIf="rest.loggedIn() && rest.getRole()=='Admin' || rest.getRole()=='Gerente'">
                                         <a routerLink="/productTypes/update/{{pt._id}}" class="table-link">
                                             <span class="fa-stack">
                                                 <i class="fa fa-square fa-stack-2x"></i>
