--- a/src/app/components/products/product.component.html
+++ b/src/app/components/products/product.component.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 
-<div class="container bootstrap snippet">
+<div class="container bootstrap snippet" *ngIf="rest.loggedIn() && rest.getRole()=='Admin' || rest.getRole()=='Gerente'">
     <div class="row">
         <div class="col-lg-12">
             <div class="main-box no-header clearfix">
@@ -88,7 +88,7 @@
                                     <th><span>Unidad</span></th>
                                     <th class="text-center"><span>Categoria</span></th>
                                     <th><span>Precio</span></th>
-                                    <th>Opciones</th>
+                                    <th *ngIf="rest.loggedIn() && rest.getRole()=='Admin' || rest.getRole()=='Gerente'">Opciones</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -108,7 +108,7 @@
                                     <td>
                                         <a href="#">{{p.price}}</a>
                                     </td>
-                                    <td style="width: 20%;">
+                                    <td style="width: 20%;" *ngIf="rest.loggedIn() && rest.getRole()=='Admin' || rest.getRole()=='Gerente'">
                                         <a routerLink="/products/update/{{p._id}}" class="table-link">
                                             <span class="fa-stack">
                                                 <i class="fa fa-square fa-stack-2x"></i>
