--- a/src/app/components/unit/unit.component.html
+++ b/src/app/components/unit/unit.component.html
@@ -1,7 +1,7 @@
 
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 
-  <div class="container bootstrap snippet">
+  <div class="container bootstrap snippet" *ngIf="rest.loggedIn() && rest.getRole()=='Admin' || rest.getRole()=='Gerente'">
       <div class="row">
           <div class="col-lg-12">
               <div class="main-box no-header clearfix">
@@ -40,7 +40,7 @@
                                 <tr >
                                 <th><span>Unidades de medida</span></th>
                                 <th><span>Peso</span></th>
-                                <th><span>Opciones</span></th>
+                                <th *ngIf="rest.loggedIn() && rest.getRole()=='Admin' || rest.getRole()=='Gerente'"><span>Opciones</span></th>
                                 </tr >
                             </thead>
                             <tbody>
