Se agrega validacion a los pedidos

--- a/src/app/components/busses/busses.component.html
+++ b/src/app/components/busses/busses.component.html
@@ -11,7 +11,7 @@
                         <form class="needs-validation" [formGroup]="reactiveForm" (ngSubmit)="createBusses()">
                             <div class="form-row">
                               <div class="col-md-4 mb-3">
-                                <label for="validationCustom01">Espacio del camión</label>
+                                <label for="validationCustom01">Espacio del camión (Metros Cuadrados)</label>
                                 <input type="number" class="form-control" formControlName="space_box" class="form-control" #space_box id="validationCustom01" placeholder="10"  required>
                               </div>
                               <div class="col-md-4 mb-3">
