--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item" *ngIf="rest.loggedIn() && rest.getRole()=='Admin'">
       <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-        <i class="fas fa-fw fa-cog"></i>
+        <i class="fas fa-fw fa-users"></i>
         <span>Personal</span>
       </a>
       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
@@ -47,7 +47,7 @@
 
     <li class="nav-item" *ngIf="rest.loggedIn() && rest.getRole()!='Chofer'">
       <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-        <i class="fas fa-fw fa-wrench"></i>
+        <i class="fas fa-fw fa-tasks"></i>
         <span>Pedidos</span>
       </a>
       <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar" *ngIf="rest.loggedIn()">
@@ -65,7 +65,7 @@
 
     <li class="nav-item" *ngIf="rest.loggedIn() && (rest.getRole()=='Admin' || rest.getRole()=='Gerente' || rest.getRole()=='Chef')">
       <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseProducts" aria-expanded="true" aria-controls="collapseProducts">
-        <i class="fas fa-fw fa-wrench"></i>
+        <i class="fas fa-fw fa-cart-plus"></i>
         <span>Productos</span>
       </a>
       <div id="collapseProducts" class="collapse" aria-labelledby="collapseProducts" data-parent="#accordionSidebar" *ngIf="rest.loggedIn()">
@@ -80,7 +80,7 @@
 
     <li class="nav-item" *ngIf="rest.loggedIn() && (rest.getRole()!='Compras' && rest.getRole()!='Chef')">
       <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseRequests" aria-expanded="true" aria-controls="collapseRequests">
-        <i class="fas fa-fw fa-wrench"></i>
+        <i class="fas fa-fw fa-truck"></i>
         <span>Salidas</span>
       </a>
       <div id="collapseRequests" class="collapse" aria-labelledby="collapseRequests" data-parent="#accordionSidebar" *ngIf="rest.loggedIn()">
@@ -142,59 +142,11 @@
             </div>
           </li>
 
-          <!-- Nav Item - Alerts -->
-          <li class="nav-item dropdown no-arrow mx-1">
-            <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fas fa-bell fa-fw"></i>
-              <!-- Counter - Alerts -->
-              <span class="badge badge-danger badge-counter">3+</span>
-            </a>
-            <!-- Dropdown - Alerts -->
-            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
-              <h6 class="dropdown-header">
-                Alerts Center
-              </h6>
-              <a class="dropdown-item d-flex align-items-center" href="#">
-                <div class="mr-3">
-                  <div class="icon-circle bg-primary">
-                    <i class="fas fa-file-alt text-white"></i>
-                  </div>
-                </div>
-                <div>
-                  <div class="small text-gray-500">December 12, 2019</div>
-                  <span class="font-weight-bold">A new monthly report is ready to download!</span>
-                </div>
-              </a>
-              <a class="dropdown-item d-flex align-items-center" href="#">
-                <div class="mr-3">
-                  <div class="icon-circle bg-success">
-                    <i class="fas fa-donate text-white"></i>
-                  </div>
-                </div>
-                <div>
-                  <div class="small text-gray-500">December 7, 2019</div>
-                  $290.29 has been deposited into your account!
-                </div>
-              </a>
-              <a class="dropdown-item d-flex align-items-center" href="#">
-                <div class="mr-3">
-                  <div class="icon-circle bg-warning">
-                    <i class="fas fa-exclamation-triangle text-white"></i>
-                  </div>
-                </div>
-                <div>
-                  <div class="small text-gray-500">December 2, 2019</div>
-                  Spending Alert: We've noticed unusually high spending for your account.
-                </div>
-              </a>
-              <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
-            </div>
-          </li>
 
           <!-- Nav Item - Messages -->
           <li class="nav-item dropdown no-arrow mx-1">
             <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fas fa-envelope fa-fw"></i>
+              <i class="fas fa-envelope fa-bell"></i>
               <!-- Counter - Messages -->
               <span class="badge badge-danger badge-counter">{{this.notif}}</span>
             </a>
