--- a/src/app/components/request/request.component.html
+++ b/src/app/components/request/request.component.html
@@ -7,7 +7,7 @@
             <div class="col-md-3 mb-3">
                 <label for="validationCustom05">Comedor que reliza el pedido</label>
                 <select id="inputType" class="form-control" name="userType" #userType="ngModel" [(ngModel)]="request.dRoom" required>
-                    <option selected> Elegir...</option>
+                    <option disabled selected> Elegir...</option>
                     <option *ngFor="let dr of dRooms">{{dr.dRoom}}</option>
                 </select>
             </div>
@@ -26,39 +26,52 @@
             <textarea id="tArequest" rows="2" cols="50" name="desc" class="form-control" #desc="ngModel" [(ngModel)]="request.observations">
             </textarea>
         </div>
+
         <ng-container *ngFor="let pt of ptypes, let i = index" id="accordion">
+
             <a data-toggle="collapse" href="#acc{{i}}" role="button" aria-expanded="false" aria-controls="samplse">
                 {{pt.type}}
             </a>
+
             <hr>
             <div class="collapse mb-4" id="acc{{i}}">
+
                 <div class="container">
+                  <div class="mb-4 text-right">
+                          <button class="btn btn-primary float-right mb-3" type="reset" (click)="addLine(i)">Agregar</button>
+
+                  </div>
                         <ng-container *ngFor="let p of linesByCat[i], let j = index">
+
+
+
                                 <div class="row">
                                     <div class="col-sm-3">
+                                      <span>Producto</span>
                                         <select class="searcher{{p}} form-control" name="product" id="{{p}}"  #hello required>
-                                            <option selected> Producto...</option>
+                                            <option disabled selected> Producto...</option>
                                             <ng-container *ngFor="let p of products">
                                                 <option *ngIf="p.category.type == pt.type"> {{p.name}}</option>
                                             </ng-container>
                                         </select>
                                     </div>
                                     <div class="col-sm-3">
-
-                                        <select class="unit{{p}} form-control" name="unit" id="unit{{p}}" hidden required>
-                                            <option selected> Unidad...</option>
+                                      <span>Unidad</span>
+                                        <select class="unit{{p}} form-control" (click)="test()" name="unit" #unit id="unit{{p}}" hidden required>
+                                            <option disabled selected> Unidad...</option>
                                             <ng-container *ngFor="let p of products">
                                                 <option *ngIf="p.category.type == pt.type"> {{p.name}}</option>
                                             </ng-container>
                                         </select>
                                     </div>
                                     <div class="col-sm-2">
-                                            <input type="text" id="qtty{{p}}" class="form-control"  placeholder="2" hidden required>
+                                      <span>Cantidad</span>
+                                            <input type="number" id="qtty{{p}}" (click)="test()" (keyup)="test()" name="qtty" #qtty class="form-control"  placeholder="2" hidden required>
                                     </div>
                                     <div class="col-sm-3">
-
-                                        <select class="provider{{p}} form-control" name="provider" id="provider{{p}}" hidden required>
-                                            <option selected> Proveedor...</option>
+                                      <span>Proveedor</span>
+                                        <select class="provider{{p}} form-control" (click)="test()" name="provider" #provider id="provider{{p}}" hidden required>
+                                            <option disabled selected> Proveedor...</option>
                                             <ng-container *ngFor="let p of products">
                                                 <option *ngIf="p.category.type == pt.type"> {{p.name}}</option>
                                             </ng-container>
@@ -75,30 +88,26 @@
                                     </div>
                                 </div>
                                 <hr>
+
                             </ng-container>
-                            <div class="mb-4 text-right">
-                                    <button class="btn btn-primary float-right mb-3" type="reset" (click)="addLine(i)">Agregar</button>
 
-                                </div>
                 </div>
-
-
             </div>
         </ng-container>
-        <a (click)="createRequest()" class="btn btn-primary btn-icon-split float-right mb-3">
+
+        <button (click)="createRequest()" [disabled]="test()"
+        class="btn btn-primary btn-icon-split float-right mb-3">
+
                 <span class="icon text-white-50">
                     <i class="fas fa-plus"></i>
                 </span>
                 <span class="text" style="color:white">Agregar Pedido</span>
-            </a>
+          </button>
+
         <a [routerLink]="['/requests']" class="btn btn-danger btn-icon-split float-right mb-3">
                 <span class="icon text-white-50">
                     <i class="fas fa-times"></i>
                 </span>
                 <span class="text" style="color:white">Cancelar</span>
             </a>
-
-
-
-
     </div>
